--- a/Bewerbungsunterlagen.alternative.Header.html
+++ b/Bewerbungsunterlagen.alternative.Header.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documents</title>
-    <link rel="icon" type="image/x-icon" href="Bilder\mk24 HEAD.BODY\head_logo-transparent-png.png">
+    <link rel="icon" type="image/x-icon" href="mk24 HEAD.BODY\head_logo-transparent-png.png">
     <script src="Homepage-SCRIPT.js"></script>
     <style>
         body {
@@ -110,7 +110,7 @@
 <body>
 
     <header>
-        <img src="Bilder\mk24 HEAD.BODY\Design ohne Titel (1).gif" alt="mk24" class="logo">
+        <img src="Design ohne Titel (1).gif" alt="mk24" class="logo">
         <nav id="navbar">
             <a href="http://127.0.0.1:3000/c:/Users/TAAKOMAS/Visual%20Studio%20Code/Fertige%20Website%20alternative/Homepage-without-Container.html">Home   🏠︎  </a>
             <a href="http://127.0.0.1:3000/c:/Users/TAAKOMAS/Visual%20Studio%20Code/Fertige%20Website%20alternative/DasBinIch.Link.Header.html">Über mich🧍‍♂️</a>
